Fix spacing on last row of puzzles on puzzle list pages

--- a/app/javascript/pages/puzzle_list/style.sass
+++ b/app/javascript/pages/puzzle_list/style.sass
@@ -1,4 +1,4 @@
-@import "../_colors"
+@import "../../../assets/stylesheets/_colors"
 
 body[data-controller=puzzles][data-action=index], body[data-action=puzzles]
   .puzzle-page
@@ -12,6 +12,9 @@ body[data-controller=puzzles][data-action=index], body[data-action=puzzles]
     flex-wrap: wrap
     justify-content: space-between
     margin-bottom: 100px
+
+  .blank
+    width: 190px
 
   .miniboard-link
     margin: 20px 0
